# qaswa.rs

./: .env  Cargo.toml  README.md  flinch.toml
db/: Cargo.toml
db/src/: lib.rs  ops.rs  pgrow.rs  setup.rs
db/src/extension/: res.rs
server/: Cargo.toml
server/src/: certs.rs  extractor.rs  lib.rs  logger.rs  routes.rs  server.rs  setup.rs  state.rs  util.rs  validator.rs
server/src/cli/: mod.rs
server/src/controller/: web.rs
server/src/extension/: flinch.rs  mod.rs
server/src/handlers/: mod.rs
server/src/layers/: auth.rs  logger.rs  mod.rs  prometheus.rs  rate_limiter.rs
server/src/layers/jwt/: claims.rs  mod.rs
templates/html/: index.html
utility/: Cargo.toml
utility/src/: env.rs  errors.rs  lib.rs
utility/src/extension/: flinch_ext.rs  func_result.rs  mod.rs  pg.rs
utility/src/killport/: linux.rs  macos.rs  mod.rs  windows.rs
utility/src/pw/: generator.rs  mod.rs  scorer.rs
