[workspace]
members = [
    "server",
    "db",
    "utility"
]

[workspace.dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.68"
axum = { version="0.6.18", features = ["headers", "macros", "query"] }
axum-server = { version="0.5.1", features=["tls-rustls"] }

bytes = "1.4.0"

chrono = { version="0.4.26", features = ["clock", "std", "serde"], default-features = false }
color-eyre = "0.6.2"
crossbeam-queue = "0.3.8"

derive_more = "0.99.17"

eyre = "0.6.8"

flinch = "0.1.67"

hyper = "0.14.26"

itertools = "0.11.0"

passwords = { version="3.1.13", features = ["common-password"] }
pg-embed = { version = "0.7.1", default-features = false, features = ["rt_tokio","rt_tokio_migrate"] }

rand = "0.8.5"
rayon = "1.7.0"

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sha2 = "0.10.7"
socketioxide = "0.4.1"
sqlx = { version = "0.7.1", features = ["postgres","runtime-tokio","json","chrono","uuid","rust_decimal"] }

tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
tracing = "0.1.37"

uuid = { version="1.3.4", features = ["serde", "v4"] }
