[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg-embed = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
sqlx = { workspace=true }
tokio = { workspace=true }
tracing = { workspace=true }
utility = { path="../utility" }