[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.8.2"
axum = { workspace=true }
async-trait = { workspace=true }
bytes = { workspace=true }
flinch = { workspace=true }
hyper = { workspace=true }
jsonwebtoken = "8.3.0"
openssl = "0.10"
rcgen = "0.11.1"
serde = { workspace=true }
serde_json = { workspace=true }
serde_urlencoded = { workspace=true }
tracing = { workspace=true }
tokio = { workspace=true }
tower = { version="0.4.13", features = ["timeout"] }
tower-http = { version="0.4.1", features = ["cors", "fs", "request-id", "util"] }
utility = { path = "../utility" }
validator = { version="0.16.1", features = ["derive"] }