[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.8.2"
axum = { workspace=true }
axum-server = { workspace=true }
async-trait = { workspace=true }
bytes = { workspace=true }
chrono = { workspace=true }
clap = { version="4.3.5", features = ["derive", "cargo"] }
derive_more = { workspace=true }
color-eyre = { workspace=true }
db = { path = "../db" }
flinch = { workspace=true }
futures = "0.3.28"
http-auth-basic = "0.3.3"
hyper = { workspace=true }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
mime = "0.3.17"
openssl = "0.10"
rcgen = "0.11.1"
serde = { workspace=true }
serde_json = { workspace=true }
serde_urlencoded = { workspace=true }
sqlx = { workspace=true }
tera = "1.19.0"
tracing = { workspace=true }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version="0.3.17", features = ["registry", "env-filter", "fmt", "json"] }
tokio = { workspace=true }
tower = { version="0.4.13", features = ["timeout"] }
tower-http = { version="0.4.1", features = ["cors", "fs", "request-id", "util"] }
utility = { path = "../utility" }
uuid = { workspace=true }
validator = { version="0.16.1", features = ["derive"] }