[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace=true }
axum = { workspace=true }
async-trait = { workspace=true }
color-eyre = { workspace=true }
config = "0.13.3"
chrono = { workspace=true }
crossbeam-queue = { workspace=true }
derive_more = { workspace=true }
dotenvy = "0.15.7"
eyre = { workspace=true }
flinch = { workspace=true }
nix = "0.26.2"
pg-embed = { workspace=true }
passwords = { version="3.1.13", features = ["common-password"] }
rand = "0.8.5"
rayon = { workspace=true }
serde = { workspace=true }
serde_json = { workspace=true }
sqlx = { workspace=true }
uuid = { workspace=true }
tracing = { workspace=true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.13.0"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
]